--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.23.2",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
+    "lucide-react": "^0.509.0",
     "react": "^18.3.1",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.3.1",
